fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -113,8 +113,8 @@
   "You have left the shared document": "您已退出共享文档",
   "Could not leave document": "无法退出文档",
   "Apply template": "应用模板",
-  "New emoji": "New emoji",
-  "Upload emoji": "Upload emoji",
+  "New emoji": "新表情",
+  "Upload emoji": "上传表情",
   "Disconnect": "断开连接",
   "Disconnect analytics": "断开分析服务连接",
   "Home": "主页",
@@ -138,8 +138,8 @@
   "Log out": "退出登录",
   "Mark notifications as read": "将通知标记为已读",
   "Archive all notifications": "将所有通知存档",
-  "Mark as read": "Mark as read",
-  "Mark as unread": "Mark as unread",
+  "Mark as read": "标记为已读",
+  "Mark as unread": "标记为未读",
   "New App": "新建应用",
   "New Application": "新应用",
   "This version of the document was deleted": "此版本的文档已被删除",
@@ -258,13 +258,13 @@
   "Currently editing": "正在编辑",
   "Currently viewing": "正在浏览",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} 浏览",
-  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
-  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
-  "Please enter a name for the emoji": "Please enter a name for the emoji",
-  "Please select an image file": "Please select an image file",
-  "Emoji created successfully": "Emoji created successfully",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "不支持的文件类型，请使用PNG、JPG、GIF或WebP。",
+  "File size too large. Maximum size is {{ size }}.": "上传文件过大. 文件大小限制为{{ size }}。",
+  "Please enter a name for the emoji": "请输入表情名称",
+  "Please select an image file": "请选择一个图像文件",
+  "Emoji created successfully": "表情创建成功",
   "Uploading": "上传中",
-  "Add emoji": "Add emoji",
+  "Add emoji": "添加表情符号",
   "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
   "Upload an image": "Upload an image",
   "Click or drag to replace": "Click or drag to replace",
