--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -709,7 +709,7 @@
   "Add a description": "Add a description",
   "Signing in": "Signing in",
   "You can safely close this window once the Outline desktop app has opened": "You can safely close this window once the Outline desktop app has opened",
-  "{{ count }} changes": "{{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
   "{{ count }} changes_plural": "{{ count }} changes",
   "Previous change": "Previous change",
   "Next change": "Next change",
