fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -138,8 +138,8 @@
   "Log out": "Log out",
   "Mark notifications as read": "Segnare tutte le notifiche come lette",
   "Archive all notifications": "Archivia tutte le notifiche",
-  "Mark as read": "Mark as read",
-  "Mark as unread": "Mark as unread",
+  "Mark as read": "Segna come letto",
+  "Mark as unread": "Segna come non letto",
   "New App": "New App",
   "New Application": "Nuova Applicazione",
   "This version of the document was deleted": "Questa versione del documento è stata eliminata",
@@ -353,12 +353,12 @@
   "Sorry, an error occurred.": "Spiacenti, si è verificato un errore.",
   "Click to retry": "Clicca per riprovare",
   "Back": "Indietro",
-  "Notification options": "Notification options",
+  "Notification options": "Opzioni di notifica",
   "Unknown": "Sconosciuto",
-  "Mentions": "Mentions",
-  "Comments and replies": "Comments and replies",
-  "Document events": "Document events",
-  "Collection events": "Collection events",
+  "Mentions": "Menzioni",
+  "Comments and replies": "Commenti e risposte",
+  "Document events": "Eventi del documento",
+  "Collection events": "Raccolta eventi",
   "Mark all as read": "Contrassegna tutto come letto",
   "You're all caught up": "Sei completamente aggiornato",
   "Client type": "Tipo di cliente",
@@ -474,7 +474,7 @@
   "Change permissions?": "Modificare i permessi?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "Impossibile spostare {{ documentName }} all'interno di {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Non è possibile riordinare i documenti in una raccolta ordinata alfabeticamente",
-  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} non può essere spostato qui",
   "Return to App": "Torna all'applicazione",
   "Installation": "Installazione",
   "Unstar document": "Rimuovi dai preferiti",
@@ -555,7 +555,7 @@
   "Italic": "Corsivo",
   "Sorry, that link won’t work for this embed type": "Siamo spiacenti, questo link non funzionerà per questo tipo di embed",
   "File attachment": "File allegato",
-  "Embed PDF": "Embed PDF",
+  "Embed PDF": "Incorpora PDF",
   "Enter a link": "Inserisci un link",
   "Big heading": "Titolo grande",
   "Medium heading": "Titolo medio",
@@ -617,7 +617,7 @@
   "Account": "Account",
   "API & Apps": "API & Applicazioni",
   "Details": "Dettagli",
-  "Authentication": "Authentication",
+  "Authentication": "Autenticazione",
   "Security": "Sicurezza",
   "Features": "Caratteristiche",
   "Members": "Membri",
@@ -1006,18 +1006,18 @@
   "Where users are redirected to authorize this app": "Dove gli utenti vengono reindirizzati per autorizzare questa app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Le applicazioni consentono di creare integrazioni interne o pubbliche con Outline e di fornire accesso sicuro tramite OAuth. Per maggiori dettagli, consulta la <em>documentazione per gli sviluppatori</em>.",
   "Settings saved": "Impostazioni salvate",
-  "Are you sure?": "Are you sure?",
-  "Removing": "Removing",
-  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
-  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Are you sure?": "Sei sicuro?",
+  "Removing": "Rimozione",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "La rimozione di questo provider di autenticazione impedirà ai membri di accedere con {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Gestisci il modo in cui i membri accedono al tuo spazio di lavoro e quali provider di autenticazione sono abilitati.",
   "Allow members to sign-in with {{ authProvider }}": "Consenti ai membri di accedere con {{ authProvider }}",
-  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connetti {{authProvider}} per consentire ai membri di accedere",
   "Connected": "Connesso",
   "Disabled": "Disattivato",
   "Connect": "Connetti",
   "Allow members to sign-in using their email address": "Consenti ai membri di accedere utilizzando il loro indirizzo email",
   "The server must have SMTP configured to enable this setting": "Il server deve disporre di SMTP configurato per abilitare questa impostazione",
-  "Restrictions": "Restrictions",
+  "Restrictions": "Restrizioni",
   "by {{ name }}": "di {{ name }}",
   "Last used": "Ultimo utilizzo",
   "No expiry": "Nessuna scadenza",
@@ -1220,7 +1220,7 @@
   "Are you sure you want to require invites?": "Sei sicuro di voler richiedere gli inviti?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "I nuovi utenti dovranno prima essere invitati a creare un account. Le opzioni <em>Ruolo predefinito</em> e <em>Domini consentiti</em> non saranno più applicabili.",
   "Settings that impact the access, security, and content of your workspace.": "Impostazioni che incidono sull'accesso, sulla sicurezza e sul contenuto dell'area di lavoro.",
-  "Invites": "Invites",
+  "Invites": "Inviti",
   "Allow users to send invites": "Permetti agli utenti di mandare inviti",
   "Allow editors to invite other people to the workspace": "Permetti agli editori d'invitare altri utenti nello spazio di lavoro",
   "Require invites": "Richiedi inviti",
