fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h de lecture",
   "{{ minutes }}m read": "{{ minutes }}m de lecture",
   "Revision deleted": "Révision supprimée",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Version actuelle",
   "{{userName}} edited": "{{userName}} a modifié",
   "Revision options": "Options de version",
@@ -709,6 +711,12 @@
   "Add a description": "Ajouter une description",
   "Signing in": "Connexion en cours",
   "You can safely close this window once the Outline desktop app has opened": "Vous pouvez fermer cette fenêtre en toute sécurité après que l'application bureau Outline s'est ouverte",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Erreur lors de la création du commentaire",
   "Add a comment": "Ajouter un commentaire",
   "Add a reply": "Ajouter une réponse",
@@ -756,6 +764,7 @@
   "Archived": "Archivé",
   "Save draft": "Enregistrer le brouillon",
   "Restore version": "Restaurer cette version",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Pas encore d'historique",
   "Source": "Source",
   "Created": "Créé",
