fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "Lectura de {{ minutes }}m",
   "Revision deleted": "Revisión eliminada",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Versión actual",
   "{{userName}} edited": "{{userName}} ha editado",
   "Revision options": "Opciones de revisión",
@@ -709,6 +711,12 @@
   "Add a description": "Añadir una descripción",
   "Signing in": "Iniciando sesión",
   "You can safely close this window once the Outline desktop app has opened": "Puede cerrar esta ventana de forma segura una vez que se haya abierto la aplicación de escritorio de Outline",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Error creando el comentario",
   "Add a comment": "Añadir un comentario",
   "Add a reply": "Añadir una respuesta",
@@ -756,6 +764,7 @@
   "Archived": "Archivado",
   "Save draft": "Guardar borrador",
   "Restore version": "Restaurar versión",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Aún no hay historial",
   "Source": "Fuente",
   "Created": "Creado",
