fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Revision deleted",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Aktuální verze",
   "{{userName}} edited": "{{userName}} akutalizoval",
   "Revision options": "Možnosti revize",
@@ -709,6 +711,12 @@
   "Add a description": "Přidat popis",
   "Signing in": "Přihlašování",
   "You can safely close this window once the Outline desktop app has opened": "Po otevření desktopové aplikace Outline můžete toto okno bezpečně zavřít",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Chyba při vytváření komentáře",
   "Add a comment": "Přidat komentář",
   "Add a reply": "Přidat odpověď",
@@ -756,6 +764,7 @@
   "Archived": "Archivované",
   "Save draft": "Uložit koncept",
   "Restore version": "Obnovit verzi",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Zatím žádná historie",
   "Source": "Zdroj",
   "Created": "Vytvořeno",
