fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}m gelesen",
   "Revision deleted": "Überarbeitung gelöscht",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Aktuelle Version",
   "{{userName}} edited": "{{userName}} bearbeitete",
   "Revision options": "Version-Einstellungen",
@@ -709,6 +711,12 @@
   "Add a description": "Beschreibung hinzufügen",
   "Signing in": "Wird angemeldet",
   "You can safely close this window once the Outline desktop app has opened": "Du kannst dieses Fenster schließen, sobald die Outline Desktop-App geöffnet wurde",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Fehler beim Erstellen des Kommentars",
   "Add a comment": "Kommentar hinzufügen",
   "Add a reply": "Antwort hinzufügen",
@@ -756,6 +764,7 @@
   "Archived": "Archiviert",
   "Save draft": "Entwurf speichern",
   "Restore version": "Version wiederherstellen",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Noch keine Historie",
   "Source": "Quelle",
   "Created": "Erstellt",
