fix: New Hebrew translations from Crowdin [ci skip]

--- a/shared/i18n/locales/he_IL/translation.json
+++ b/shared/i18n/locales/he_IL/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ דקות }} קראתי",
   "Revision deleted": "Revision deleted",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "גרסה נוכחית",
   "{{userName}} edited": "{{userName}} edited",
   "Revision options": "Revision options",
@@ -709,6 +711,12 @@
   "Add a description": "הוסף תיאור",
   "Signing in": "Signing in",
   "You can safely close this window once the Outline desktop app has opened": "You can safely close this window once the Outline desktop app has opened",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Error creating comment",
   "Add a comment": "Add a comment",
   "Add a reply": "Add a reply",
@@ -756,6 +764,7 @@
   "Archived": "Archived",
   "Save draft": "Save draft",
   "Restore version": "Restore version",
+  "Highlight changes": "Highlight changes",
   "No history yet": "No history yet",
   "Source": "Source",
   "Created": "Created",
