fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }} perccel ezelőtt olvasta",
   "Revision deleted": "A módosítás törölve lett",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Jelenlegi verzió",
   "{{userName}} edited": "{{userName}} módosította",
   "Revision options": "Revízió beállítások",
@@ -709,6 +711,12 @@
   "Add a description": "Adja meg a leírást",
   "Signing in": "Bejelentkezés",
   "You can safely close this window once the Outline desktop app has opened": "You can safely close this window once the Outline desktop app has opened",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Error creating comment",
   "Add a comment": "Megjegyzés hozzáadása",
   "Add a reply": "Válasz hozzáadása",
@@ -756,6 +764,7 @@
   "Archived": "Archiválva",
   "Save draft": "Piszkozat mentése",
   "Restore version": "Verzió visszaállítása",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Még nincsenek előzmények",
   "Source": "Forrás",
   "Created": "Létrehozva",
