fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h letto",
   "{{ minutes }}m read": "{{ minutes }} minuti di lettura",
   "Revision deleted": "Revisione eliminata",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Versione corrente",
   "{{userName}} edited": "{{userName}} modificato",
   "Revision options": "Opzioni revisione",
@@ -709,6 +711,12 @@
   "Add a description": "Aggiungi una descrizione",
   "Signing in": "Accesso in corso",
   "You can safely close this window once the Outline desktop app has opened": "È possibile chiudere in modo sicuro questa finestra una volta aperta l'applicazione desktop Outline",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Errore durante la creazione del commento",
   "Add a comment": "Aggiungi un commento",
   "Add a reply": "Aggiungi una risposta",
@@ -756,6 +764,7 @@
   "Archived": "Archiviati",
   "Save draft": "Salva bozza",
   "Restore version": "Ripristina versione",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Nessuna cronologia",
   "Source": "Origine",
   "Created": "Creato",
