fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }} ",
   "Revision deleted": "Revision deleted",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "現在のバージョン",
   "{{userName}} edited": "{{userName}} が編集しました",
   "Revision options": "改訂オプション",
@@ -709,6 +711,12 @@
   "Add a description": "説明文を追加",
   "Signing in": "ログイン中",
   "You can safely close this window once the Outline desktop app has opened": "Outline デスクトップ アプリが開いたら、このウィンドウを安全に閉じることができます",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "コメントの作成中にエラーが発生しました",
   "Add a comment": "コメントを追加",
   "Add a reply": "返信を追加",
@@ -756,6 +764,7 @@
   "Archived": "アーカイブ",
   "Save draft": "下書きを保存",
   "Restore version": "復元",
+  "Highlight changes": "Highlight changes",
   "No history yet": "履歴はありません",
   "Source": "ソース",
   "Created": "作成日時",
