fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}분 전에 읽음",
   "Revision deleted": "수정본 삭제됨",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "현재 버전",
   "{{userName}} edited": "{{userName}} 이(가) 수정함",
   "Revision options": "수정 옵션",
@@ -709,6 +711,12 @@
   "Add a description": "설명 추가",
   "Signing in": "로그인 중",
   "You can safely close this window once the Outline desktop app has opened": "Outline desktop 앱이 열리면 이 창을 안전하게 닫을 수 있습니다.",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "댓글을 만드는 중에 오류가 발생했습니다.",
   "Add a comment": "댓글 달기",
   "Add a reply": "답글 달기",
@@ -756,6 +764,7 @@
   "Archived": "보관됨",
   "Save draft": "임시 저장",
   "Restore version": "버전 복원",
+  "Highlight changes": "Highlight changes",
   "No history yet": "아직 기록이 없습니다",
   "Source": "원본",
   "Created": "생성됨",
