fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}u gelezen",
   "{{ minutes }}m read": "{{ minutes }}m gelezen",
   "Revision deleted": "Revisie verwijderd",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Huidige versie",
   "{{userName}} edited": "{{userName}} bewerkte",
   "Revision options": "Revisie opties",
@@ -709,6 +711,12 @@
   "Add a description": "Beschrijving toevoegen",
   "Signing in": "Inloggen",
   "You can safely close this window once the Outline desktop app has opened": "Je kunt dit venster veilig sluiten zodra de Outline desktop app is geopend",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Fout bij maken reactie",
   "Add a comment": "Voeg een opmerking toe",
   "Add a reply": "Reactie toevoegen",
@@ -756,6 +764,7 @@
   "Archived": "Gearchiveerd",
   "Save draft": "Bewaar concept",
   "Restore version": "Versie herstellen",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Nog geen geschiedenis",
   "Source": "Bron",
   "Created": "Aangemaakt",
