fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }} minut czytania",
   "Revision deleted": "Usunięto poprawkę",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Aktualna wersja",
   "{{userName}} edited": "Użytkownik {{userName}} edytował",
   "Revision options": "Opcje rewizji",
@@ -709,6 +711,12 @@
   "Add a description": "Dodaj opis",
   "Signing in": "Logowanie...",
   "You can safely close this window once the Outline desktop app has opened": "Możesz bezpiecznie zamknąć to okno po otwarciu aplikacji komputerowej Outline",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Wystąpił błąd podczas tworzenia komentarza",
   "Add a comment": "Dodaj komentarz",
   "Add a reply": "Dodaj odpowiedź",
@@ -756,6 +764,7 @@
   "Archived": "Zarchiwizowano",
   "Save draft": "Zapisz wersję roboczą",
   "Restore version": "Przywróć wersję",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Nie ma jeszcze historii",
   "Source": "Źródło",
   "Created": "Utworzono",
