fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Revision deleted",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Versão atual",
   "{{userName}} edited": "{{userName}} editado",
   "Revision options": "Opções de revisão",
@@ -709,6 +711,12 @@
   "Add a description": "Adicionar descrição",
   "Signing in": "A iniciar sessão",
   "You can safely close this window once the Outline desktop app has opened": "Pode fechar com segurança esta janela quando a aplicação Outline de ambiente de trabalho abrir",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Erro ao criar comentário",
   "Add a comment": "Adicionar comentário",
   "Add a reply": "Adicionar resposta",
@@ -756,6 +764,7 @@
   "Archived": "Arquivado",
   "Save draft": "Guardar rascunho",
   "Restore version": "Restaurar versão",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Ainda sem histórico",
   "Source": "Fonte",
   "Created": "Criado",
