fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}m läst",
   "Revision deleted": "Revision raderad",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Nuvarande version",
   "{{userName}} edited": "{{userName}} redigerade",
   "Revision options": "Alternativ för revidering",
@@ -709,6 +711,12 @@
   "Add a description": "Lägg till en beskrivning",
   "Signing in": "Loggar in",
   "You can safely close this window once the Outline desktop app has opened": "Du kan stänga detta fönster säkert när appen Outline har öppnat",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Fel vid skapande av kommentar",
   "Add a comment": "Lägg till en kommentar",
   "Add a reply": "Lägg till ett svar",
@@ -756,6 +764,7 @@
   "Archived": "Arkiverad",
   "Save draft": "Spara utkast",
   "Restore version": "Återställ version",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Ingen historik än",
   "Source": "Källa",
   "Created": "Skapad",
