fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}s okuma",
   "{{ minutes }}m read": "{{ minutes }}d okuma",
   "Revision deleted": "Revizyon silindi",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Mevcut sürüm",
   "{{userName}} edited": "{{userName}} düzenledi",
   "Revision options": "Revizyon seçenekleri",
@@ -709,6 +711,12 @@
   "Add a description": "Bir açıklama ekle",
   "Signing in": "Giriş yapılıyor",
   "You can safely close this window once the Outline desktop app has opened": "Outline masaüstü uygulaması açıldıktan sonra bu pencereyi güvenle kapatabilirsiniz",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Yorum oluşturulurken hata oluştu",
   "Add a comment": "Yorum ekle",
   "Add a reply": "Cevap ekle",
@@ -756,6 +764,7 @@
   "Archived": "Arşivlendi",
   "Save draft": "Taslağı kaydet",
   "Restore version": "Sürümü geri yükle",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Henüz tarihçe yok",
   "Source": "Kaynak",
   "Created": "Oluşturuldu",
