fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Версія видалена",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Поточна версія",
   "{{userName}} edited": "{{userName}} відредаговано",
   "Revision options": "Варіанти перегляду",
@@ -709,6 +711,12 @@
   "Add a description": "Додати опис",
   "Signing in": "Вхід",
   "You can safely close this window once the Outline desktop app has opened": "Ви можете закрити це вікно, після відкриття програми Outline",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Помилка створення коментаря",
   "Add a comment": "Додати коментар",
   "Add a reply": "Додати відповідь",
@@ -756,6 +764,7 @@
   "Archived": "Заархівовано",
   "Save draft": "Save draft",
   "Restore version": "Відновити версію",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Ще немає історії",
   "Source": "Source",
   "Created": "Створено",
