fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "阅读了{{ minutes }}分钟",
   "Revision deleted": "修订已被删除",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "当前版本",
   "{{userName}} edited": "{{userName}} 已编辑",
   "Revision options": "修订选项",
@@ -709,6 +711,12 @@
   "Add a description": "添加描述",
   "Signing in": "登录中",
   "You can safely close this window once the Outline desktop app has opened": "Outline 桌面应用程序打开后，你可以安全地关闭此窗口",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "创建评论时出错",
   "Add a comment": "添加评论",
   "Add a reply": "增加回复",
@@ -756,6 +764,7 @@
   "Archived": "已归档",
   "Save draft": "保存草稿",
   "Restore version": "恢复此版本",
+  "Highlight changes": "Highlight changes",
   "No history yet": "暂无历史记录",
   "Source": "源",
   "Created": "创建日期",
