fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "「{{ minutes }}分鐘閱讀」",
   "Revision deleted": "Revision deleted",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "目前版本",
   "{{userName}} edited": "{{userName}} 已編輯",
   "Revision options": "修訂版本選項",
@@ -709,6 +711,12 @@
   "Add a description": "新增描述",
   "Signing in": "正在登入",
   "You can safely close this window once the Outline desktop app has opened": "Outline 桌面應用程式打開後，您可以安全地關閉此視窗",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "留言時發生錯誤",
   "Add a comment": "新增留言",
   "Add a reply": "新增回覆…",
@@ -756,6 +764,7 @@
   "Archived": "已封存",
   "Save draft": "儲存草稿",
   "Restore version": "還原版本",
+  "Highlight changes": "Highlight changes",
   "No history yet": "暫無歷史紀錄",
   "Source": "來源",
   "Created": "建立日期",
