fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "{{ minutes }} phút đọc ",
   "Revision deleted": "Phiên bản đã được xóa",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Phiên bản hiện tại",
   "{{userName}} edited": "{{userName}} đã chỉnh sửa",
   "Revision options": "Tùy chọn sửa đổi",
@@ -709,6 +711,12 @@
   "Add a description": "Thêm mô tả",
   "Signing in": "Đang đăng nhập",
   "You can safely close this window once the Outline desktop app has opened": "Bạn có thể đóng cửa sổ này một cách an toàn sau khi ứng dụng Outline trên máy tính đã mở",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Lỗi khi tạo bình luận",
   "Add a comment": "Thêm một bình luận",
   "Add a reply": "Thêm một trả lời",
@@ -756,6 +764,7 @@
   "Archived": "Đã lưu trữ",
   "Save draft": "Save draft",
   "Restore version": "Khôi phục phiên bản",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Chưa có lịch sử",
   "Source": "Nguồn",
   "Created": "Được tạo",
