fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -386,6 +386,8 @@
   "{{ hours }}h read": "{{ hours }}h read",
   "{{ minutes }}m read": "Leitura de {{ minutes }}min",
   "Revision deleted": "Revisão excluída",
+  "{{count}} people": "{{count}} person",
+  "{{count}} people_plural": "{{count}} people",
   "Current version": "Versão atual",
   "{{userName}} edited": "{{userName}} editou",
   "Revision options": "Opções de revisão",
@@ -709,6 +711,12 @@
   "Add a description": "Adicionar uma descrição",
   "Signing in": "Iniciando sessão",
   "You can safely close this window once the Outline desktop app has opened": "Você pode fechar essa janela com segurança quando o aplicativo Outline for aberto no computador",
+  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
+  "{{ count }} changes": "{{ count }} change",
+  "{{ count }} changes_plural": "{{ count }} changes",
+  "Previous change": "Previous change",
+  "Next change": "Next change",
   "Error creating comment": "Erro ao criar comentário",
   "Add a comment": "Adicionar um comentário",
   "Add a reply": "Adicionar uma resposta",
@@ -756,6 +764,7 @@
   "Archived": "Arquivado",
   "Save draft": "Salvar rascunho",
   "Restore version": "Restaurar versão",
+  "Highlight changes": "Highlight changes",
   "No history yet": "Sem histórico por enquanto",
   "Source": "Fonte",
   "Created": "Criado",
